--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paystack": "^5.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
   },
